--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1><center>Hand-Detection</center></h1>
-    <audio src="/audio/suicidesqu_idpIC16g.mp3" id="audio"></audio>
+    <audio src="suicidesqu_idpIC16g.mp3" id="audio"></audio>
     <video id="video"></video>
     <canvas id="canvas"></canvas>
     <!-- Load the handtrackjs model. -->
